# CLEANSER

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/cleanser/: __init__.py  configuration.py  constants.py  guide_mixture.py  run.py
src/cleanser_qc/: configuration.py  run.py
tests/: conftest.py  test_configuration.py  test_mudata_integration.py
tests/data/: test_mudata_small.h5mu  test_small.mtx
