[project]
name = "CLEANSER"
authors = [
    { name = "Siyan Liu", email = "siyan.liu432@duke.edu" },
    { name = "Bill Majoros", email = "william.majoros@duke.edu" },
]
description = "Crispr Library Evaluation and Ambient Noise Suppression for Enhanced scRNA-seq"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "cmdstanpy==1.2",
    "numpy==1.26.4",
    "matplotlib==3.9",
    "pandas==2.2.2",
    "anndata==0.10.7",
    "mudata==0.2.3",
    "muon==0.1.7",
    "scipy==1.15.2"
]
version = "1.2"
keywords = ["scRNA-seq", "bioinformatics"]

[project.scripts]
cleanser = "cleanser.run:run_cli"
cleanser_qc = "cleanser_qc.run:run_cli"
cr2cleanser = "cleanser.cellranger:run_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cleanser = ["*.stan"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]

[tool.black]
line-length = 120
